# bookmark2obsidian

./: Cargo.toml  README.md  example-chromium.json  example-firefox.json  simple-bookmarks.html
archive/: html-parser.rs
src/: cli.rs  main.rs  obsidian.rs
src/bookmarks/: chrome.rs  firefox.rs  mod.rs  model.rs
