[package]
name = "bookmark2obsidian"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
jiff = "0.2.1"
nom = "8.0.0"
pretty_assertions = "1.4.1"
scraper = "0.23.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
